<resources>
    <string name="app_name">EspressoTesting</string>
    <string name="edt_name_hint">Nome</string>
    <string name="edt_job_hint">Cargo</string>
    <string name="alert_title">Alerta</string>
    <string name="empty_fields">Preencha todos os campos</string>
</resources>
